crates/plotnik-tests/tests/02-parser/recovery_unexpected/colon_before_pattern_not_capture_type.txt
(a) @x : (b)
------------------ DIAGNOSTICS -------------------
error: expected a pattern
 --> query.ptk:1:8
  |
1 | (a) @x : (b)
  |        ^
  |
help: start with `(` for a node, `[` for an alternation, `{` for a sequence, a quote for a literal token, or `_` for a wildcard
